# cvec

./: .gitignore  .travis.yml  BUGS  CHANGES  HISTORY  LICENSE  Makefile.am  Makefile.in  PackageInfo.g  PackageInfoFor4.5.g  README  README.md  TEST  TIMINGS  TODO  burschen.gp  configure  configure.ac  init.g  makedoc.g  proposal  read.g
.github/workflows/: CI.yml  release.yml
_data/: package.yml
doc/: chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chap5.html  chap5.txt  chap5_mj.html  chap6.html  chap6.txt  chap6_mj.html  chap7.html  chap7.txt  chap7_mj.html  chap8.html  chap8.txt  chap8_mj.html  chap9.html  chap9.txt  chap9_mj.html  chapBib.html  chapBib_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  cvec.bib  cvec.xml  datastrucs.xml  examples.xml  gaplib.xml  (+9 more)
example/: mats.g
gap/: calibration.gi  cmat.gd  cmat.gi  cvec.gd  cvec.gi  greasecalibration.gi  linalg.gd  linalg.gi  matobj.gd  matobj.gi  matobj1.gd  matobj2.gd  matobjplist.gd  matobjplist.gi  matrix.gi  quarry.g  test.gi
local/: calibration.capella  calibration.prokyon
scripts/: build_gap.sh
src/: cvec.c  gf2lib.def  gf2lib_32.c  gf2lib_32.h  gf2lib_64.c  gf2lib_64.h  gf2libh.def  quarry.c
test/: benchresults  gcd.g  matmultest.g  matobjtest.g  polynomials.g  results.winograd  scatest.g  scatest.results  sqrt.g  winograd.g
tst/: babymonster.tst  cmat.tst  conversion.tst  echelon.tst  polynomials.tst  testall.g
tst/builtin/: addmul.tst  cvec.tst  matmul.tst  misc.tst  scalar_in.tst  scalar_out.tst  scalar_unpack.tst  slice.tst
